Add code syntax highlighter

--- a/src/CodeNotes.Web/Pages/Shared/_Layout.cshtml
+++ b/src/CodeNotes.Web/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,9 @@
     <link rel="icon" href="~/favicon.png">
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/css/prism.css" asp-append-version="true">
     <script src="~/js/scripts.js" defer asp-append-version="true"></script>
+    <script src="~/js/prism.js" defer asp-append-version="true"></script>
 </head>
 <body>
 <header class="header container">
