--- a/src/CodeNotes.Web/wwwroot/css/styles.css
+++ b/src/CodeNotes.Web/wwwroot/css/styles.css
@@ -33,7 +33,7 @@
   --success-color: #62af9a;
   --danger-color: #ce7e7b;
   --code-background-color: #1a1f28;
-  --code-color: #8891a4;
+  --code-color: #ccc;
   --table-border-color: #202632;
   /**
      * Z index
