Add homepage link to sidebar header

--- a/src/CodeNotes.Web/Pages/Shared/_Layout.cshtml
+++ b/src/CodeNotes.Web/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
     <aside class="sidebar" id="sidebar">
         <div class="container">
             <header>
+                <a aria-label="Code Notes Homepage" href="/">Code Notes</a>
                 <button class="menu-close" id="menu-close" aria-label="Close navigation" aria-controls="sidebar">✕</button>
             </header>
             <nav>
